--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   intl: ^0.17.0
   flutter_slidable: ^0.6.0
   table_calendar: ^3.0.1
+  rflutter_alert: ^2.0.2
+  measure_size: ^2.0.0
 
 dev_dependencies:
   flutter_test:
@@ -28,7 +30,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  assets:
+  assets: 
     - assets/
 
   
