--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   table_calendar: ^3.0.1
   rflutter_alert: ^2.0.2
   measure_size: ^2.0.0
+  percent_indicator: ^3.0.1
 
 dev_dependencies:
   flutter_test:
