--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   rflutter_alert: ^2.0.2
   measure_size: ^2.0.0
   percent_indicator: ^3.0.1
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
