--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,12 @@ dependencies:
   intl: ^0.17.0
   flutter_slidable: ^0.6.0
   table_calendar: ^3.0.1
-  rflutter_alert: ^2.0.2
   measure_size: ^2.0.0
   percent_indicator: ^3.0.1
   uuid: ^3.0.4
+  firebase_auth: ^3.0.2
+  cloud_firestore: ^2.5.0
+  firebase_core: ^1.5.0
 
 dev_dependencies:
   flutter_test:
