--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_core: ^1.5.0
   adaptive_dialog: ^1.1.0
   cached_network_image: ^3.1.0
+  flutter_screenutil: ^5.0.0+2
 
 dev_dependencies:
   flutter_test:
